Parte_3/Parser/Parser.output
Terminals unused in grammar

   DEF
   ";"
   ERROR


State 37 conflicts: 2 shift/reduce
State 62 conflicts: 14 shift/reduce
State 63 conflicts: 14 shift/reduce
State 101 conflicts: 14 shift/reduce
State 104 conflicts: 2 shift/reduce
State 105 conflicts: 2 shift/reduce
State 106 conflicts: 2 shift/reduce
State 107 conflicts: 2 shift/reduce
State 108 conflicts: 2 shift/reduce
State 109 conflicts: 2 shift/reduce
State 128 conflicts: 14 shift/reduce
State 134 conflicts: 14 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmts_list

    2 stmts_list: %empty
    3           | stmts_list decl "SEP"
    4           | stmts_list error "SEP"

    5 decl: alias_decl
    6     | var_decl
    7     | const_decl
    8     | func_decl
    9     | assignment
   10     | classdef
   11     | while_stmt
   12     | expression

   13 type: "TYPE_ID"
   14     | type "->" type
   15     | "(" type ")"

   16 alias_decl: ALIAS "TYPE_ID" "=" type

   17 var_decl: VAR "ID" ":" type
   18         | VAR "ID" ":" type "=" expression

   19 const_decl: LET "ID" ":" type "=" expression

   20 assignment: SET ID_list "=" expression
   21           | SET "$" ID_list "=" expression
   22           | "$" "ID" "<-" expression

   23 ID_list: %empty
   24        | ID_list "ID"

   25 classdef: opt_mut CLASS "TYPE_ID" opt_constructor_args "=" class_bodies

   26 opt_mut: %empty
   27        | MUT

   28 opt_constructor_args: %empty
   29                     | constructor_args

   30 class_bodies: classdef_body
   31             | class_ctor

   32 classdef_body: "{" classdef_body_decl_list "}"

   33 classdef_body_decl_list: %empty
   34                        | classdef_body_decl_list classdef_body_decl "SEP"

   35 classdef_body_decl: const_decl
   36                   | var_decl
   37                   | func_decl

   38 constructor_args: "(" opt_constr_arg_dec ")"

   39 opt_constr_arg_dec: %empty
   40                   | constr_arg_dec_list

   41 constr_arg_dec_list: constr_arg_dec
   42                    | constr_arg_dec_list "," constr_arg_dec

   43 constr_arg_dec: opt_var_or_val "ID" ":" type

   44 opt_var_or_val: %empty
   45               | VAR
   46               | VAL

   47 class_ctor: "TYPE_ID" "(" opt_expression_comma_list ")"

   48 func_decl: LET "ID" func_arg_list opt_colon_type "=" body

   49 body: expression
   50     | block_expression

   51 opt_colon_type: %empty
   52               | ":" type

   53 func_arg_list: func_arg
   54              | func_arg_list func_arg

   55 func_arg: "ID" ":" type

   56 while_stmt: WHILE cond_expr body_expr_while

   57 cond_expr: expression

   58 body_expr_while: do_expression

   59 do_expression: DO expression
   60              | DO block_expression
   61              | DO assignment

   62 opt_expression_comma_list: %empty
   63                          | expression_comma_list

   64 expression_comma_list: expression
   65                      | expression_comma_list "," expression

   66 expression_comma_list_empty: %empty
   67                            | expression_comma_list

   68 expression: expression expression_list
   69           | operator_expr
   70           | conditional_expr

   71 conditional_expr: IF cond_expr THEN body_expr_then ELSE body_expr_else
   72                 | WHEN expression DO expression
   73                 | WHEN expression DO block_expression
   74                 | LET let_expr_comma_list IN body

   75 body_expr_then: body

   76 body_expr_else: body

   77 operator_expr: operator_expr "&&" expr1
   78              | operator_expr "||" expr1
   79              | expr1

   80 expr1: expr1 "<" expr2
   81      | expr1 "<=" expr2
   82      | expr1 "==" expr2
   83      | expr1 "/=" expr2
   84      | expr1 ">=" expr2
   85      | expr1 ">" expr2
   86      | expr2

   87 expr2: expr2 "+" expr3
   88      | expr2 "-" expr3
   89      | expr3

   90 expr3: expr3 "*" factor
   91      | expr3 "/" factor
   92      | expr3 "%" factor
   93      | factor

   94 factor: NOT factor
   95       | "+" factor
   96       | "-" factor
   97       | "$" "ID"
   98       | "ID"
   99       | "INT"
  100       | "CHAR"
  101       | "STRING"
  102       | "BOOL"
  103       | "(" expression ")"
  104       | "TYPE_ID" "(" expression_comma_list_empty ")"

  105 expression_list: expression
  106                | expression_list expression

  107 let_expr_comma_list: let_expr
  108                    | let_expr_comma_list "," let_expr

  109 let_expr: "ID" ":" type "=" expression

  110 block_expression: "{" block_stmt_list "}"

  111 block_stmt_list: %empty
  112                | block_stmt_list block_stmt "SEP"

  113 block_stmt: var_decl
  114           | const_decl
  115           | while_stmt
  116           | assignment
  117           | expression


Terminals, with rules where they appear

$end (0) 0
error (256) 4
ALIAS (258) 16
MUT (259) 27
CLASS (260) 25
SET (261) 20 21
VAL (262) 46
VAR (263) 17 18 45
LET (264) 19 48 74
DEF (265)
IF (266) 71
THEN (267) 71
ELSE (268) 71
WHEN (269) 72 73
WHILE (270) 56
DO (271) 59 60 61 72 73
NOT (272) 94
IN (273) 74
"ID" (274) 17 18 19 22 24 43 48 55 97 98 109
"TYPE_ID" (275) 13 16 25 47 104
"INT" (276) 99
"CHAR" (277) 100
"+" (278) 87 95
"-" (279) 88 96
"*" (280) 90
"/" (281) 91
"(" (282) 15 38 47 103 104
")" (283) 15 38 47 103 104
";" (284)
"{" (285) 32 110
"}" (286) 32 110
"," (287) 42 65 108
"<-" (288) 22
"$" (289) 21 22 97
":" (290) 17 18 19 43 52 55 109
"->" (291) 14
"==" (292) 82
"%" (293) 92
"&&" (294) 77
"||" (295) 78
"=" (296) 16 18 19 20 21 25 48 109
"/=" (297) 83
"<" (298) 80
">" (299) 85
"<=" (300) 81
">=" (301) 84
"SEP" (302) 3 4 34 112
"STRING" (303) 101
ERROR (304)
"BOOL" (305) 102


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
program (52)
    on left: 1, on right: 0
stmts_list (53)
    on left: 2 3 4, on right: 1 3 4
decl (54)
    on left: 5 6 7 8 9 10 11 12, on right: 3
type (55)
    on left: 13 14 15, on right: 14 15 16 17 18 19 43 52 55 109
alias_decl (56)
    on left: 16, on right: 5
var_decl (57)
    on left: 17 18, on right: 6 36 113
const_decl (58)
    on left: 19, on right: 7 35 114
assignment (59)
    on left: 20 21 22, on right: 9 61 116
ID_list (60)
    on left: 23 24, on right: 20 21 24
classdef (61)
    on left: 25, on right: 10
opt_mut (62)
    on left: 26 27, on right: 25
opt_constructor_args (63)
    on left: 28 29, on right: 25
class_bodies (64)
    on left: 30 31, on right: 25
classdef_body (65)
    on left: 32, on right: 30
classdef_body_decl_list (66)
    on left: 33 34, on right: 32 34
classdef_body_decl (67)
    on left: 35 36 37, on right: 34
constructor_args (68)
    on left: 38, on right: 29
opt_constr_arg_dec (69)
    on left: 39 40, on right: 38
constr_arg_dec_list (70)
    on left: 41 42, on right: 40 42
constr_arg_dec (71)
    on left: 43, on right: 41 42
opt_var_or_val (72)
    on left: 44 45 46, on right: 43
class_ctor (73)
    on left: 47, on right: 31
func_decl (74)
    on left: 48, on right: 8 37
body (75)
    on left: 49 50, on right: 48 74 75 76
opt_colon_type (76)
    on left: 51 52, on right: 48
func_arg_list (77)
    on left: 53 54, on right: 48 54
func_arg (78)
    on left: 55, on right: 53 54
while_stmt (79)
    on left: 56, on right: 11 115
cond_expr (80)
    on left: 57, on right: 56 71
body_expr_while (81)
    on left: 58, on right: 56
do_expression (82)
    on left: 59 60 61, on right: 58
opt_expression_comma_list (83)
    on left: 62 63, on right: 47
expression_comma_list (84)
    on left: 64 65, on right: 63 65 67
expression_comma_list_empty (85)
    on left: 66 67, on right: 104
expression (86)
    on left: 68 69 70, on right: 12 18 19 20 21 22 49 57 59 64 65 68
    72 73 103 105 106 109 117
conditional_expr (87)
    on left: 71 72 73 74, on right: 70
body_expr_then (88)
    on left: 75, on right: 71
body_expr_else (89)
    on left: 76, on right: 71
operator_expr (90)
    on left: 77 78 79, on right: 69 77 78
expr1 (91)
    on left: 80 81 82 83 84 85 86, on right: 77 78 79 80 81 82 83 84
    85
expr2 (92)
    on left: 87 88 89, on right: 80 81 82 83 84 85 86 87 88
expr3 (93)
    on left: 90 91 92 93, on right: 87 88 89 90 91 92
factor (94)
    on left: 94 95 96 97 98 99 100 101 102 103 104, on right: 90 91
    92 93 94 95 96
expression_list (95)
    on left: 105 106, on right: 68 106
let_expr_comma_list (96)
    on left: 107 108, on right: 74 108
let_expr (97)
    on left: 109, on right: 107 108
block_expression (98)
    on left: 110, on right: 50 60 73
block_stmt_list (99)
    on left: 111 112, on right: 110 112
block_stmt (100)
    on left: 113 114 115 116 117, on right: 112


State 0

    0 $accept: . program $end
    1 program: . stmts_list
    2 stmts_list: . %empty
    3           | . stmts_list decl "SEP"
    4           | . stmts_list error "SEP"

    $default  reduce using rule 2 (stmts_list)

    program     go to state 1
    stmts_list  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: stmts_list .  [$end]
    3 stmts_list: stmts_list . decl "SEP"
    4           | stmts_list . error "SEP"
    5 decl: . alias_decl
    6     | . var_decl
    7     | . const_decl
    8     | . func_decl
    9     | . assignment
   10     | . classdef
   11     | . while_stmt
   12     | . expression
   16 alias_decl: . ALIAS "TYPE_ID" "=" type
   17 var_decl: . VAR "ID" ":" type
   18         | . VAR "ID" ":" type "=" expression
   19 const_decl: . LET "ID" ":" type "=" expression
   20 assignment: . SET ID_list "=" expression
   21           | . SET "$" ID_list "=" expression
   22           | . "$" "ID" "<-" expression
   25 classdef: . opt_mut CLASS "TYPE_ID" opt_constructor_args "=" class_bodies
   26 opt_mut: . %empty  [CLASS]
   27        | . MUT
   48 func_decl: . LET "ID" func_arg_list opt_colon_type "=" body
   56 while_stmt: . WHILE cond_expr body_expr_while
   68 expression: . expression expression_list
   69           | . operator_expr
   70           | . conditional_expr
   71 conditional_expr: . IF cond_expr THEN body_expr_then ELSE body_expr_else
   72                 | . WHEN expression DO expression
   73                 | . WHEN expression DO block_expression
   74                 | . LET let_expr_comma_list IN body
   77 operator_expr: . operator_expr "&&" expr1
   78              | . operator_expr "||" expr1
   79              | . expr1
   80 expr1: . expr1 "<" expr2
   81      | . expr1 "<=" expr2
   82      | . expr1 "==" expr2
   83      | . expr1 "/=" expr2
   84      | . expr1 ">=" expr2
   85      | . expr1 ">" expr2
   86      | . expr2
   87 expr2: . expr2 "+" expr3
   88      | . expr2 "-" expr3
   89      | . expr3
   90 expr3: . expr3 "*" factor
   91      | . expr3 "/" factor
   92      | . expr3 "%" factor
   93      | . factor
   94 factor: . NOT factor
   95       | . "+" factor
   96       | . "-" factor
   97       | . "$" "ID"
   98       | . "ID"
   99       | . "INT"
  100       | . "CHAR"
  101       | . "STRING"
  102       | . "BOOL"
  103       | . "(" expression ")"
  104       | . "TYPE_ID" "(" expression_comma_list_empty ")"

    error      shift, and go to state 4
    ALIAS      shift, and go to state 5
    MUT        shift, and go to state 6
    SET        shift, and go to state 7
    VAR        shift, and go to state 8
    LET        shift, and go to state 9
    IF         shift, and go to state 10
    WHEN       shift, and go to state 11
    WHILE      shift, and go to state 12
    NOT        shift, and go to state 13
    "ID"       shift, and go to state 14
    "TYPE_ID"  shift, and go to state 15
    "INT"      shift, and go to state 16
    "CHAR"     shift, and go to state 17
    "+"        shift, and go to state 18
    "-"        shift, and go to state 19
    "("        shift, and go to state 20
    "$"        shift, and go to state 21
    "STRING"   shift, and go to state 22
    "BOOL"     shift, and go to state 23

    $end   reduce using rule 1 (program)
    CLASS  reduce using rule 26 (opt_mut)

    decl              go to state 24
    alias_decl        go to state 25
    var_decl          go to state 26
    const_decl        go to state 27
    assignment        go to state 28
    classdef          go to state 29
    opt_mut           go to state 30
    func_decl         go to state 31
    while_stmt        go to state 32
    expression        go to state 33
    conditional_expr  go to state 34
    operator_expr     go to state 35
    expr1             go to state 36
    expr2             go to state 37
    expr3             go to state 38
    factor            go to state 39


State 3

    0 $accept: program $end .

    $default  accept


State 4

    4 stmts_list: stmts_list error . "SEP"

    "SEP"  shift, and go to state 40


State 5

   16 alias_decl: ALIAS . "TYPE_ID" "=" type

    "TYPE_ID"  shift, and go to state 41


State 6

   27 opt_mut: MUT .

    $default  reduce using rule 27 (opt_mut)


State 7

   20 assignment: SET . ID_list "=" expression
   21           | SET . "$" ID_list "=" expression
   23 ID_list: . %empty  ["ID", "="]
   24        | . ID_list "ID"

    "$"  shift, and go to state 42

    $default  reduce using rule 23 (ID_list)

    ID_list  go to state 43


State 8

   17 var_decl: VAR . "ID" ":" type
   18         | VAR . "ID" ":" type "=" expression

    "ID"  shift, and go to state 44


State 9

   19 const_decl: LET . "ID" ":" type "=" expression
   48 func_decl: LET . "ID" func_arg_list opt_colon_type "=" body
   74 conditional_expr: LET . let_expr_comma_list IN body
  107 let_expr_comma_list: . let_expr
  108                    | . let_expr_comma_list "," let_expr
  109 let_expr: . "ID" ":" type "=" expression

    "ID"  shift, and go to state 45

    let_expr_comma_list  go to state 46
    let_expr             go to state 47


State 10

   57 cond_expr: . expression
   68 expression: . expression expression_list
   69           | . operator_expr
   70           | . conditional_expr
   71 conditional_expr: . IF cond_expr THEN body_expr_then ELSE body_expr_else
   71                 | IF . cond_expr THEN body_expr_then ELSE body_expr_else
   72                 | . WHEN expression DO expression
   73                 | . WHEN expression DO block_expression
   74                 | . LET let_expr_comma_list IN body
   77 operator_expr: . operator_expr "&&" expr1
   78              | . operator_expr "||" expr1
   79              | . expr1
   80 expr1: . expr1 "<" expr2
   81      | . expr1 "<=" expr2
   82      | . expr1 "==" expr2
   83      | . expr1 "/=" expr2
   84      | . expr1 ">=" expr2
   85      | . expr1 ">" expr2
   86      | . expr2
   87 expr2: . expr2 "+" expr3
   88      | . expr2 "-" expr3
   89      | . expr3
   90 expr3: . expr3 "*" factor
   91      | . expr3 "/" factor
   92      | . expr3 "%" factor
   93      | . factor
   94 factor: . NOT factor
   95       | . "+" factor
   96       | . "-" factor
   97       | . "$" "ID"
   98       | . "ID"
   99       | . "INT"
  100       | . "CHAR"
  101       | . "STRING"
  102       | . "BOOL"
  103       | . "(" expression ")"
  104       | . "TYPE_ID" "(" expression_comma_list_empty ")"

    LET        shift, and go to state 48
    IF         shift, and go to state 10
    WHEN       shift, and go to state 11
    NOT        shift, and go to state 13
    "ID"       shift, and go to state 14
    "TYPE_ID"  shift, and go to state 15
    "INT"      shift, and go to state 16
    "CHAR"     shift, and go to state 17
    "+"        shift, and go to state 18
    "-"        shift, and go to state 19
    "("        shift, and go to state 20
    "$"        shift, and go to state 49
    "STRING"   shift, and go to state 22
    "BOOL"     shift, and go to state 23

    cond_expr         go to state 50
    expression        go to state 51
    conditional_expr  go to state 34
    operator_expr     go to state 35
    expr1             go to state 36
    expr2             go to state 37
    expr3             go to state 38
    factor            go to state 39


State 11

   68 expression: . expression expression_list
   69           | . operator_expr
   70           | . conditional_expr
   71 conditional_expr: . IF cond_expr THEN body_expr_then ELSE body_expr_else
   72                 | . WHEN expression DO expression
   72                 | WHEN . expression DO expression
   73                 | . WHEN expression DO block_expression
   73                 | WHEN . expression DO block_expression
   74                 | . LET let_expr_comma_list IN body
   77 operator_expr: . operator_expr "&&" expr1
   78              | . operator_expr "||" expr1
   79              | . expr1
   80 expr1: . expr1 "<" expr2
   81      | . expr1 "<=" expr2
   82      | . expr1 "==" expr2
   83      | . expr1 "/=" expr2
   84      | . expr1 ">=" expr2
   85      | . expr1 ">" expr2
   86      | . expr2
   87 expr2: . expr2 "+" expr3
   88      | . expr2 "-" expr3
   89      | . expr3
   90 expr3: . expr3 "*" factor
   91      | . expr3 "/" factor
   92      | . expr3 "%" factor
   93      | . factor
   94 factor: . NOT factor
   95       | . "+" factor
   96       | . "-" factor
   97       | . "$" "ID"
   98       | . "ID"
   99       | . "INT"
  100       | . "CHAR"
  101       | . "STRING"
  102       | . "BOOL"
  103       | . "(" expression ")"
  104       | . "TYPE_ID" "(" expression_comma_list_empty ")"

    LET        shift, and go to state 48
    IF         shift, and go to state 10
    WHEN       shift, and go to state 11
    NOT        shift, and go to state 13
    "ID"       shift, and go to state 14
    "TYPE_ID"  shift, and go to state 15
    "INT"      shift, and go to state 16
    "CHAR"     shift, and go to state 17
    "+"        shift, and go to state 18
    "-"        shift, and go to state 19
    "("        shift, and go to state 20
    "$"        shift, and go to state 49
    "STRING"   shift, and go to state 22
    "BOOL"     shift, and go to state 23

    expression        go to state 52
    conditional_expr  go to state 34
    operator_expr     go to state 35
    expr1             go to state 36
    expr2             go to state 37
    expr3             go to state 38
    factor            go to state 39


State 12

   56 while_stmt: WHILE . cond_expr body_expr_while
   57 cond_expr: . expression
   68 expression: . expression expression_list
   69           | . operator_expr
   70           | . conditional_expr
   71 conditional_expr: . IF cond_expr THEN body_expr_then ELSE body_expr_else
   72                 | . WHEN expression DO expression
   73                 | . WHEN expression DO block_expression
   74                 | . LET let_expr_comma_list IN body
   77 operator_expr: . operator_expr "&&" expr1
   78              | . operator_expr "||" expr1
   79              | . expr1
   80 expr1: . expr1 "<" expr2
   81      | . expr1 "<=" expr2
   82      | . expr1 "==" expr2
   83      | . expr1 "/=" expr2
   84      | . expr1 ">=" expr2
   85      | . expr1 ">" expr2
   86      | . expr2
   87 expr2: . expr2 "+" expr3
   88      | . expr2 "-" expr3
   89      | . expr3
   90 expr3: . expr3 "*" factor
   91      | . expr3 "/" factor
   92      | . expr3 "%" factor
   93      | . factor
   94 factor: . NOT factor
   95       | . "+" factor
   96       | . "-" factor
   97       | . "$" "ID"
   98       | . "ID"
   99       | . "INT"
  100       | . "CHAR"
  101       | . "STRING"
  102       | . "BOOL"
  103       | . "(" expression ")"
  104       | . "TYPE_ID" "(" expression_comma_list_empty ")"

    LET        shift, and go to state 48
    IF         shift, and go to state 10
    WHEN       shift, and go to state 11
    NOT        shift, and go to state 13
    "ID"       shift, and go to state 14
    "TYPE_ID"  shift, and go to state 15
    "INT"      shift, and go to state 16
    "CHAR"     shift, and go to state 17
    "+"        shift, and go to state 18
    "-"        shift, and go to state 19
    "("        shift, and go to state 20
    "$"        shift, and go to state 49
    "STRING"   shift, and go to state 22
    "BOOL"     shift, and go to state 23

    cond_expr         go to state 53
    expression        go to state 51
    conditional_expr  go to state 34
    operator_expr     go to state 35
    expr1             go to state 36
    expr2             go to state 37
    expr3             go to state 38
    factor            go to state 39


State 13

   94 factor: . NOT factor
   94       | NOT . factor
   95       | . "+" factor
   96       | . "-" factor
   97       | . "$" "ID"
   98       | . "ID"
   99       | . "INT"
  100       | . "CHAR"
  101       | . "STRING"
  102       | . "BOOL"
  103       | . "(" expression ")"
  104       | . "TYPE_ID" "(" expression_comma_list_empty ")"
